--- a/clinica-salomao/.github/workflows/main.yml
+++ b/clinica-salomao/.github/workflows/main.yml
@@ -13,4 +13,4 @@ jobs:
         host: ${{ secrets.HOST }} 
         user: ${{ secrets.USER }}
         password: ${{ secrets.PASS }}
-        localDir: "windows-pd-0001.fs.locaweb.com.br\WNFS-0002\clinicaesteticas1\web"
+        localDir: "/clinica-salomao/src"
