--- a/clinica-salomao/.github/workflows/main.yml
+++ b/clinica-salomao/.github/workflows/main.yml
@@ -13,4 +13,5 @@ jobs:
         host: ${{ secrets.HOST }} 
         user: ${{ secrets.USER }}
         password: ${{ secrets.PASS }}
-        localDir: "/clinica-salomao/src"
+        localDir: "dist"
+        remoteDir: "/clinica-salomao"
