--- a/clinica-salomao/.github/workflows/main.yml
+++ b/clinica-salomao/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
         user: ${{ secrets.USER }}
         password: ${{ secrets.PASS }}
         localDir: "/clinica-salomao"
-        remoteDir: "/clinica-salomao/src/main.tsx"
+        remoteDir: "web"
