--- a/clinica-salomao/.github/workflows/main.yml
+++ b/clinica-salomao/.github/workflows/main.yml
@@ -5,12 +5,23 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Show environment variables
+      run: |
+        echo "HOST: $HOST"
+        echo "USER: $USER"
+        echo "PASS: $PASS"
+      env:
+        HOST: ${{ secrets.HOST }}
+        USER: ${{ secrets.USER }}
+        PASS: ${{ secrets.PASS }}
 
     - name: FTP Deploy Locaweb
       uses: locaweb/ftp-deploy@1.0.0
       with:
-        host: ${{ secrets.HOST }} 
+        host: ${{ secrets.HOST }}
         user: ${{ secrets.USER }}
         password: ${{ secrets.PASS }}
         localDir: "/clinica-salomao"
