--- a/clinica-salomao/.github/workflows/main.yml
+++ b/clinica-salomao/.github/workflows/main.yml
@@ -5,13 +5,20 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: List contents of localDir
+      run: |
+        ls -l /clinica-salomao
+        echo "Contents of /clinica-salomao/src/main.tsx"
+        cat /clinica-salomao/src/main.tsx
 
     - name: FTP Deploy Locaweb
       uses: locaweb/ftp-deploy@1.0.0
       with:
-        host: ${{ secrets.HOST }} 
+        host: ${{ secrets.HOST }}
         user: ${{ secrets.USER }}
         password: ${{ secrets.PASS }}
-        localDir: "/"
+        localDir: "/clinica-salomao"
         remoteDir: "web"
