--- a/clinica-salomao/.github/workflows/main.yml
+++ b/clinica-salomao/.github/workflows/main.yml
@@ -8,19 +8,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-   - name: List contents of localDir
-    run: |
-    ls -l /github/workspace/clinica-salomao
-    echo "Contents of /github/workspace/clinica-salomao/src"
-    ls -l /github/workspace/clinica-salomao/src
-    echo "Contents of /github/workspace/clinica-salomao/src/main.tsx"
-    cat /github/workspace/clinica-salomao/src/main.tsx
-
     - name: FTP Deploy Locaweb
       uses: locaweb/ftp-deploy@1.0.0
       with:
         host: ${{ secrets.HOST }}
         user: ${{ secrets.USER }}
         password: ${{ secrets.PASS }}
-        localDir: "/clinica-salomao"
+        localDir: "/"
         remoteDir: "web"
