--- a/clinica-salomao/.github/workflows/main.yml
+++ b/clinica-salomao/.github/workflows/main.yml
@@ -15,4 +15,4 @@ jobs:
         user: ${{ secrets.USER }}
         password: ${{ secrets.PASS }}
         localDir: "/github/workspace/clinica-salomao"
-        remoteDir: "\\windows-pd-0001.fs.locaweb.com.br\WNFS-0002\clinicaesteticas1\web"
+        remoteDir: "/web"
